* Overwrite by Rank Math don't renders GD variables - FIXED
* v1 to v2 upgrade shows missing Events plugin - FIXED
* Post meta output `gd-comma-list` not working with bootstrap styles - FIXED
* Video screenshot linking to video lightbox does not work on single image output - FIXED
* Required field text not showing for checkbox - FIXED
* Import GD elementor templates not working - FIXED

= 2.1.0.13 =
* Small fix for the way some addresses are geocoded if "postal_town" is present - FIXED
* Borlabs Cookie plugin integration added for GD maps - ADDED
* Chrome prevents saving integer number for upload max size - FIXED

= 2.1.0.12 =
* GD > Categories option added to choose image size - ADDED
* Frontend delete listing don't prompt any response message with AUI - FIXED
* Option added GD > Loop Actions to hide layouts for frontend list view - ADDED
* Elementor Them Builder layout preview image missing for GD Elementor templates - FIXED
* Photos gallery opens multiple lightbox if Elementor is active - FIXED
* Unable to save max upload size in decimal - FIXED
* Allow to set marker z-index via hook - ADDED
* Tool added to removed unused GDv1 options - ADDED

= 2.1.0.11 =
* Conflict of select2 basic version loaded - FIXED
* Brizy page builder compatibility - ADDED
* Featured field always shows checked - FIXED
* GD > Recent Reviews option added to filter reviews by post id - ADDED
* GD > Categories icon color not working with icon top design - FIXED
* Map marker hover bounce not working on lazy load map - FIXED
* Cat filter on map breaks the design - FIXED
* GD > Best of listings widget don't show empty categories - CHANGED
* UpSolution Core plugin compatibility - ADDED
* Hook added to extend "Admin Only" edit visibility to other user roles - ADDED
* Field to filter posts by Service Distance added - ADDED
* Allow geodirectory template override from theme directory - ADDED
* Some database with pxc_strict_mode prevents insert review without primary key - FIXED