@@ -5,6 +5,7 @@
 * Video screenshot linking to video lightbox does not work on single image output - FIXED
 * Required field text not showing for checkbox - FIXED
 * Import GD elementor templates not working - FIXED
+* Brivona theme & Zeen theme Tipi Builder compatibility - FIXED
 
 = 2.1.0.13 =
 * Small fix for the way some addresses are geocoded if "postal_town" is present - FIXED
